# Spec-Driven-Fullstack-Todo

./: .gitignore  CLAUDE.md  README.md
.claude/agents/: auth-security.md  fastapi-backend.md  neon-database-ops.md  nextjs-frontend-architect.md
.claude/skills/auth-skill/: SKILL.md
.claude/skills/backend-core/: SKILL.md
.claude/skills/database-design/: SKILL.md
.claude/skills/frontend-ui-builder/: SKILL.md
.specify/memory/: constitution.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  task.py
backend/app/routers/: __init__.py  tasks.py
backend/app/schemas/: __init__.py  task.py
backend/app/services/: __init__.py  task_service.py
backend/app/utils/: __init__.py  jwt.py
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AuthForm.tsx  ErrorMessage.tsx  LoadingSpinner.tsx  ProtectedRoute.tsx  TaskCard.tsx  TaskFilters.tsx  TaskForm.tsx  TaskList.tsx
frontend/src/hooks/: useAuth.tsx  useTasks.ts
frontend/src/lib/: api-client.ts  auth.ts  token.ts  utils.ts
frontend/src/types/: api.ts  index.ts
history/prompts/001-backend-api/: 0001-backend-api-spec-creation.spec.prompt.md  0002-backend-api-plan-generation.plan.prompt.md  (+3 more)
specs/001-backend-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-nextjs-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+20 files in other folders)
